added civilization changemaps and ChangeMap abstracted in superclass

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>worldmaphistory</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>worldmaphistory</name>
+    <name>worldmaphistory-backend</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
