--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,23 @@
 spring:
   application:
     name: worldmaphistory-backend
+  data:
+    jpa:
+      repositories:
+        bootstrap-mode: default
   datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/worldmaphistory?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/wmh
     username: root
     password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    open-in-view: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
 
 logging:
   level:
-    root: warn
+    root: info
